hdone/objects/Confirmation__c.object
<CustomObject>
    <description>Confirmations for data records. For ProviderOne used to confirm provider and facility demographic information</description>
    <fields>
        <fullName>AccountId_Formula__c</fullName>
        <formula>IF(NOT(ISBLANK( Account__c )), 
CASE( SourceOrg__c , &quot;Customer&quot;, 
(CASE( Account__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Account__c), 
&quot;HealthDetail&quot;, Account__r.ExternalId__c, &quot;Error&quot;)) , 
&quot;HealthDetail&quot;, 
(CASE( Account__r.SourceOrg__c , &quot;HealthDetail&quot;,Account__r.ExternalId__c, 
&quot;Customer&quot;, Account__r.Remote_Account_Id__c  , &quot;Error&quot;)) ,&quot;Error&quot;), 
NULL) 


/* Checks to see if Primary record is shared from customer org or Master org 
Also looks at lookup records for same thing 
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account record</description>
        <inlineHelpText>Account record</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Confirmations</relationshipLabel>
        <relationshipName>Confirmations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AddressId_Formula__c</fullName>
        <formula>IF(NOT(ISBLANK(Address__c)),
CASE( SourceOrg__c , &quot;Customer&quot;, 
(CASE( Address__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Address__c),
&quot;HealthDetail&quot;, Address__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Address__r.SourceOrg__c , &quot;HealthDetail&quot;,Address__r.ExternalId__c, 
&quot;Customer&quot;, Address__r.Remote_AddressId__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing 
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AddressId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressTypeId_Formula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Address_Type__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;, 
(CASE(  Address_Type__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Address_Type__c),
&quot;HealthDetail&quot;, Address_Type__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Address_Type__r.SourceOrg__c , &quot;HealthDetail&quot;,Address_Type__r.ExternalId__c, 
&quot;Customer&quot;, Address_Type__r.Remote_AddressType_Id__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing 
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer record Id or External Id</inlineHelpText>
        <label>AddressTypeId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>AddressType record</description>
        <inlineHelpText>AddressType record</inlineHelpText>
        <label>Address Type</label>
        <referenceTo>Address_Type__c</referenceTo>
        <relationshipLabel>Confirmations</relationshipLabel>
        <relationshipName>Confirmations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Confirmations</relationshipLabel>
        <relationshipName>Confirmations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AuditReport__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>AuditReport</description>
        <inlineHelpText>AuditReport</inlineHelpText>
        <label>AuditReport</label>
        <referenceTo>AuditReport__c</referenceTo>
        <relationshipLabel>Confirmations</relationshipLabel>
        <relationshipName>Confirmations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AuditSettingId_Formula__c</fullName>
        <formula>IF(NOT(ISBLANK( AuditSetting__c )),
CASE(  SourceOrg__c  , &quot;Customer&quot;, 
(CASE(   AuditSetting__r.SourceOrg__c, &quot;Customer&quot;, CASESAFEID( AuditSetting__c ),
&quot;HealthDetail&quot;,  AuditSetting__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( AuditSetting__r.SourceOrg__c , &quot;HealthDetail&quot;,AuditSetting__r.ExternalId__c, 
&quot;Customer&quot;,  AuditSetting__r.Remote_AuditSettingId__c, &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing 
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AuditSettingId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuditSetting__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to AuditSetting</description>
        <inlineHelpText>Lookup to AuditSetting</inlineHelpText>
        <label>AuditSetting</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product names must match. Please check Product Name on Confirmation and AuditSetting</errorMessage>
            <filterItems>
                <field>$Source.Product_Name__c</field>
                <operation>equals</operation>
                <valueField>AuditSetting__c.Product_Name__c</valueField>
            </filterItems>
            <infoMessage>Must select records with matching Product Names</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AuditSetting__c</referenceTo>
        <relationshipLabel>Confirmations</relationshipLabel>
        <relationshipName>Confirmations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments_Long__c</fullName>
        <description>Long comments field</description>
        <inlineHelpText>Long comments field</inlineHelpText>
        <label>Comments Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Confirmation comments</description>
        <inlineHelpText>Confirmation comments</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <description>Generic field to hold miscellaneous information such as Name</description>
        <inlineHelpText>Completed By</inlineHelpText>
        <label>Completed By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfirmationDateTimeLast__c</fullName>
        <description>Latest Confirmation Date and Time</description>
        <inlineHelpText>Latest Confirmation Date and Time</inlineHelpText>
        <label>ConfirmationDateTimeLast</label>
        <summarizedField>Confirmation_Data__c.ConfirmationData_DateTime__c</summarizedField>
        <summaryForeignKey>Confirmation_Data__c.Confirmation__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ConfirmationId_Formula__c</fullName>
        <description>Confirmation Id Formula</description>
        <formula>CASE( SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Id),
&quot;HealthDetail&quot;, ExternalId__c ,
&quot;Error&quot;)

/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing 
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Confirmation Id Formula</inlineHelpText>
        <label>ConfirmationId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Data_Count__c</fullName>
        <description>Count of number of Confirmation Data Records</description>
        <inlineHelpText>Number of Confirmation Data records</inlineHelpText>
        <label>Confirmation Data Count</label>
        <summaryForeignKey>Confirmation_Data__c.Confirmation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Confirmation_Related_External__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Confirmation</description>
        <inlineHelpText>Related Confirmation</inlineHelpText>
        <label>Confirmation Related External</label>
        <referenceTo>Confirmation__c</referenceTo>
        <relationshipLabel>Confirmations</relationshipLabel>
        <relationshipName>Confirmations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmation_Source__c</fullName>
        <description>How confirmation was completed</description>
        <inlineHelpText>How confirmation was completed</inlineHelpText>
        <label>Confirmation Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation_Status__c</fullName>
        <description>Status of Confirmation</description>
        <inlineHelpText>Status of Confirmation</inlineHelpText>
        <label>Confirmation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Reconfirm</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Partial Complete</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>To Schedule</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation_Type__c</fullName>
        <label>Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactId_Formula__c</fullName>
        <formula>IF(NOT(ISBLANK(  Contact__c  )), 
CASE( SourceOrg__c , &quot;Customer&quot;, 
(CASE( Contact__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Contact__c), 
&quot;HealthDetail&quot;, Contact__r.ExternalId__c, &quot;Error&quot;)) , 
&quot;HealthDetail&quot;, 
(CASE( Contact__r.SourceOrg__c , &quot;HealthDetail&quot;,Contact__r.ExternalId__c, 
&quot;Customer&quot;,  Contact__r.Remote_Provider_Id__c  , &quot;Error&quot;)) ,&quot;Error&quot;), 
NULL) 


/* Checks to see if Primary record is shared from customer org or Master org 
Also looks at lookup records for same thing 
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contact record</description>
        <inlineHelpText>Contact record</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <infoMessage>Displaying Contacts for Account on Confirmation</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Confirmations</relationshipLabel>
        <relationshipName>Confirmations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_prov__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Provider</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Confirmations (Provider)</relationshipLabel>
        <relationshipName>Confirmations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ExternalId</description>
        <externalId>true</externalId>
        <inlineHelpText>ExternalId</inlineHelpText>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_File_Length__c</fullName>
        <description>Length of external file. Usually minutes for phone calls but could be pages or other for whatever external file is.</description>
        <inlineHelpText>Length of external file.</inlineHelpText>
        <label>External File Length</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_File__c</fullName>
        <label>External File</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Flow_Status__c</fullName>
        <label>Flow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IdentifierId__c</fullName>
        <description>External ID from Identifier associated with Confirmation</description>
        <inlineHelpText>External ID from Identifier associated with Confirmation</inlineHelpText>
        <label>IdentifierId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>IdentifierType record</description>
        <inlineHelpText>IdentifierType record</inlineHelpText>
        <label>Identifier Type</label>
        <referenceTo>Identifier_Type__c</referenceTo>
        <relationshipLabel>Confirmations</relationshipLabel>
        <relationshipName>Confirmations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Identifier Record</description>
        <inlineHelpText>Identifier Record</inlineHelpText>
        <label>Identifier</label>
        <referenceTo>Identifier__c</referenceTo>
        <relationshipLabel>Confirmations</relationshipLabel>
        <relationshipName>Confirmations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <description>Comments for Confirmation</description>
        <inlineHelpText>Comments for Confirmation</inlineHelpText>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PNRCStatusCheck__c</fullName>
        <description>Last date and time the PartnerNetworkRecordConnection status was updated</description>
        <inlineHelpText>Last date and time the PartnerNetworkRecordConnection status was updated</inlineHelpText>
        <label>PNRCStatusCheck</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Process_Builder_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if Process Builder has run to avoid recursive logic</description>
        <inlineHelpText>Has Process Builder run?</inlineHelpText>
        <label>Process Builder Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RemoteAuditSetting_Id__c</fullName>
        <description>RemoteAuditSettingId</description>
        <externalId>true</externalId>
        <inlineHelpText>RemoteAuditSettingId</inlineHelpText>
        <label>RemoteAuditSetting_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_AccountId__c</fullName>
        <externalId>true</externalId>
        <label>Remote AccountId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_AddressId__c</fullName>
        <description>Remote Address Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote Address Id</inlineHelpText>
        <label>Remote AddressId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_AddressType_Id__c</fullName>
        <description>Remote AddressType Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote AddressType Id</inlineHelpText>
        <label>Remote AddressType_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Confirmation_Id__c</fullName>
        <description>Remote Confirmation Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote Confirmation Id</inlineHelpText>
        <label>Remote Confirmation_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_ContactId__c</fullName>
        <externalId>true</externalId>
        <label>Remote ContactId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Status_Level_3__c</fullName>
        <description>Level 3 reporting status</description>
        <label>Reporting Status Level 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feedback Provided</fullName>
                </value>
                <value>
                    <fullName>No Feedback Provided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Status__c</fullName>
        <description>Confirmation Reporting Status. Probably eventually custom metadata</description>
        <inlineHelpText>Confirmation Reporting Status</inlineHelpText>
        <label>Reporting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Remove from directory temporarily</fullName>
                </value>
                <value>
                    <fullName>Remove ALL location for provider immediately</fullName>
                </value>
                <value>
                    <fullName>Remove location immediately</fullName>
                </value>
                <value>
                    <fullName>Display in directory</fullName>
                </value>
                <value>
                    <fullName>Remove ALL location for phone immediately</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Incomplete Information</fullName>
                </value>
                <value>
                    <fullName>In Compliance</fullName>
                </value>
                <value>
                    <fullName>Out of Compliance</fullName>
                </value>
                <value>
                    <fullName>Misunderstanding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Comment__c</fullName>
        <description>Optional comment when record sent for review</description>
        <inlineHelpText>Optional comment when record sent for review</inlineHelpText>
        <label>Review Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Flag__c</fullName>
        <description>Indicates record sent for review</description>
        <inlineHelpText>Indicates record sent for review</inlineHelpText>
        <label>Review Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scenario_Summary__c</fullName>
        <description>When applicable summary of Scenario or Question purpose</description>
        <label>Scenario Summary</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_PartnerConnection_Id__c</fullName>
        <description>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</description>
        <externalId>true</externalId>
        <inlineHelpText>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</inlineHelpText>
        <label>Sf2Sf_PartnerConnection_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareId__c</fullName>
        <description>Id from PartnerNetworkRecordConnection for shared record.</description>
        <inlineHelpText>Id from PartnerNetworkRecordConnection for shared record.</inlineHelpText>
        <label>Sf2Sf ShareId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareName__c</fullName>
        <description>Sharing name for Salesforce to Salesforce. Uses Custom setting to get name as PartnerNetworkConnection name cannot be changed and can be confusing</description>
        <inlineHelpText>Sharing name for Salesforce to Salesforce from Custom Setting</inlineHelpText>
        <label>Sf2Sf_ShareName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareStatus__c</fullName>
        <description>Populates shared status for Salesforce to Salesforce connection. Cannot read status from object only from PartnerNetworkConnection object</description>
        <inlineHelpText>Shared status for Salesforce to Salesforce connection. Not real time.</inlineHelpText>
        <label>Sf2Sf_ShareStatus</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if record should be shared with other organization. Used for Salesforce to Salesforce.</description>
        <inlineHelpText>Should record be shared?</inlineHelpText>
        <label>Share Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Identifies which is source org for record. If record is shared FROM customer to HealthDetail then Customer else if shared other way HealthDetail. Was using formula fields but getting relationship errors.</description>
        <inlineHelpText>Identifies which is source org for record Customer or HealthDetail</inlineHelpText>
        <label>SourceOrg</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>HealthDetail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Specialty</label>
        <referenceTo>Specialty__c</referenceTo>
        <relationshipLabel>Confirmations</relationshipLabel>
        <relationshipName>Confirmations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Storage_addressid__c</fullName>
        <description>AddressId from storage object. Original customer addresses moved off platform to storage such as Big Object. Used to map back for reporting</description>
        <inlineHelpText>AddressId from storage object</inlineHelpText>
        <label>Storage_addressid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubFlow_Status__c</fullName>
        <description>Secondary Status</description>
        <inlineHelpText>Secondary Status</inlineHelpText>
        <label>SubFlow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Directory Check Online</fullName>
                </value>
                <value>
                    <fullName>BadPhone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Reporting_Status__c</fullName>
        <description>Sub reporting status</description>
        <inlineHelpText>Sub reporting status</inlineHelpText>
        <label>Sub Reporting Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reporting_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Not seeing new patients</fullName>
                </value>
                <value>
                    <fullName>Appointment time too long</fullName>
                </value>
                <value>
                    <fullName>Confirm plan participation</fullName>
                </value>
                <value>
                    <fullName>Died</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Phone incorrect</fullName>
                </value>
                <value>
                    <fullName>Specialty incorrect</fullName>
                </value>
                <value>
                    <fullName>Not practice location</fullName>
                </value>
                <value>
                    <fullName>Refers here only</fullName>
                </value>
                <value>
                    <fullName>Administrative only</fullName>
                </value>
                <value>
                    <fullName>Open panel</fullName>
                </value>
                <value>
                    <fullName>Closed panel</fullName>
                </value>
                <value>
                    <fullName>Unconfirmed panel</fullName>
                </value>
                <value>
                    <fullName>Out of order</fullName>
                </value>
                <value>
                    <fullName>Under renovation</fullName>
                </value>
                <value>
                    <fullName>Leave of Absence</fullName>
                </value>
                <value>
                    <fullName>Address Incorrect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>If applicable website URL related to confirmation</description>
        <inlineHelpText>Website URL for confirmation</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Worker__c</fullName>
        <description>Worker.Name that completed initial AuditReport</description>
        <inlineHelpText>Worker that completed initial AuditReport</inlineHelpText>
        <label>Worker</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Confirmation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{00000000}</displayFormat>
        <label>Confirmation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Confirmations</pluralLabel>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>Customer Confirmation record</description>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Record</fullName>
        <active>true</active>
        <description>Master Confirmation record. Not sent to customer</description>
        <label>Master Record</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>